--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0 - Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <meta name="description" content="En StoreNike2.0 podes comunicarte con nosotros por un pedido especial, poseemos atencion personalizada, a travez de nuetsro email o redes sociales,siempre tenemos en cuenta los deseos de nuestros clientes ">
     <meta name="author" content=" Lisandro Elgueta">
 </head>
@@ -15,6 +15,7 @@
             <img src="../img/1ebc7aceddbbc6be34f0b3de2f920ce0.jpg" alt="logo" class="logos">
         </a>
         <h1>StoreNike2.0</h1>
+        <section class="barra"> 
         <nav>
             <ul class="navegador">
                 <li>
@@ -31,6 +32,7 @@
                 </li>
             </ul>
         </nav>
+        </section>
     </header>
     <main class="main">
     <h2 class="subtitulos">Contacto</h2>
@@ -60,10 +62,12 @@
 <footer class="footer">   
     <section class="redes">
         <h2 class="derechos">Derechos Reservados </h2>
+        <div class="iconos-redes">
         <img src="../img/instagram.png" alt="Instagram" class="rrss">
         <img src="../img/facebook.png" alt="Facebook" class="rrss"> 
         <img src="../img/gorjeo.png" alt="X" class="rrss">  
         <img src="../img/whatsapp.png" alt="whatsapp" class="rrss">
+        </div>
     </section>
 </footer>
 
