--- a/pages/patrocinios.html
+++ b/pages/patrocinios.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0 - Patrocinios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <meta name="description" content="En StoreNike2.0 tambien contamos con patrocinios con los mejores cantantes y skaters y deportistas para mejorar el performance de nuetsro producto como uno de ellos es Stephan janoski 'Reconocido Skater mundialmente' ">
     <meta name="keywords" content="Famosos, Patrocinios,Performance,janoski,Sneckers">
     <meta name="author" content=" Lisandro Elgueta">
@@ -16,21 +16,24 @@
             <img src="../img/1ebc7aceddbbc6be34f0b3de2f920ce0.jpg" alt="logo" class="logos">
         </a>
         <h1>StoreNike2.0</h1>
-            <ul class="navegador">
-                <li>
-                    <a href="./store.html" class="menu">Store</a>
-                </li>
-                <li>
-                    <a href="./contacto.html" class="menu">Contacto</a>
-                </li>
-                <li>
-                    <a href="./patrocinios.html" class="menu">Patrocinios</a>
-                </li>
-                <li>
-                    <a href="./quienes-somos.html" class="menu">Quienes Somos</a>
-                </li>
-            </ul>
-        </nav>
+        <section class="barra"> 
+            <nav>
+                <ul class="navegador">
+                    <li>
+                        <a href="./store.html" class="menu">Store</a>
+                    </li>
+                    <li>
+                        <a href="./contacto.html" class="menu">Contacto</a>
+                    </li>
+                    <li>
+                        <a href="./patrocinios.html" class="menu">Patrocinios</a>
+                    </li>
+                    <li>
+                        <a href="./quienes-somos.html" class="menu">Quienes Somos</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </header>
 
     <main>
@@ -48,10 +51,12 @@
     <footer>  
         <section class="redes">
             <h2 class="derechos">Derechos Reservados</h2>
+            <div class="iconos-redes">
             <img src="../img/instagram.png" alt="Instagram" class="rrss">
             <img src="../img/facebook.png" alt="Facebook" class="rrss"> 
             <img src="../img/gorjeo.png" alt="X" class="rrss">  
             <img src="../img/whatsapp.png" alt="whatsapp" class="rrss">
+        </div>
         </section>
     </footer>
 
