--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0 - Quienes somos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="description" content="Nosotros somos Exbasquebolista que decidimos cambiar el mudno de las zapatillas sneckers para mejor el performance de la gente apasionada por las zapatillas, Pueden contar con nosotros para lo que requiersan nuestros clientes ">
     <meta name="keywords" content="Informacion-Personal, Michael Jordan, Lerbon James, Privacidad, StoreNike2.0">
@@ -17,22 +17,24 @@
             <img src="../img/1ebc7aceddbbc6be34f0b3de2f920ce0.jpg" alt="logo" class="logos">
         </a>
         <h1>StoreNike2.0</h1>
-        <nav>
-            <ul class="navegador">
-                <li>
-                    <a href="./store.html" class="menu">Store</a>
-                </li>
-                <li>
-                    <a href="./contacto.html" class="menu">Contacto</a>
-                </li>
-                <li>
-                    <a href="./patrocinios.html" class="menu">Patrocinios</a>
-                </li>
-                <li>
-                    <a href="./quienes-somos.html" class="menu">Quienes Somos</a>
-                </li>
-            </ul>
-        </nav>
+        <section class="barra"> 
+            <nav>
+                <ul class="navegador">
+                    <li>
+                        <a href="./store.html" class="menu">Store</a>
+                    </li>
+                    <li>
+                        <a href="./contacto.html" class="menu">Contacto</a>
+                    </li>
+                    <li>
+                        <a href="./patrocinios.html" class="menu">Patrocinios</a>
+                    </li>
+                    <li>    
+                        <a href="./quienes-somos.html" class="menu">Quienes Somos</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
     </header>
     <main class="main">
         <h2 class="subtitulos">Quienes somos</h2>
@@ -48,10 +50,12 @@
     <footer class="footer">  
         <section class="redes">
             <h2 class="derechos">Derechos Reservados</h2>
-            <img src="../img/instagram.png" alt="Instagram" class="rrss">
-            <img src="../img/facebook.png" alt="Facebook" class="rrss"> 
-            <img src="../img/gorjeo.png" alt="X" class="rrss"> 
-            <img src="../img/whatsapp.png" alt="whatsapp" class="rrss">
+            <div class="iconos-redes">
+                <img src="../img/instagram.png" alt="Instagram" class="rrss">
+                <img src="../img/facebook.png" alt="Facebook" class="rrss"> 
+                <img src="../img/gorjeo.png" alt="X" class="rrss"> 
+                <img src="../img/whatsapp.png" alt="whatsapp" class="rrss">
+            </div>
         </section>
     </footer>
 
