--- a/pages/store.html
+++ b/pages/store.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreNike2.0 - Store </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="description" content="En nuestra Tienda de StoreNike2.0 podes encontrar las mejores zapatillas del pais, contamos con un amplio catalogo de zapatillas, tambien realizamos personalizacion de zapatillas y la mejor tienda que veras">
     <meta name="keywords" content="Sneckers, airforce, jordanmid,dunklow,zapatillas,personalizacion">
@@ -17,27 +17,29 @@
         <img src="../img/1ebc7aceddbbc6be34f0b3de2f920ce0.jpg" alt="logo" class="logos" >
         </a>
         <h1>StoreNike2.0</h1>
-    <nav>
-        <ul class="navegador">
-            <li>
-                <a href="./store.html" class="menu">Store</a>
-            </li>
-            <li>
-                <a href="./contacto.html" class="menu">Contacto</a>
-            </li>
-            <li>
-                <a href="./patrocinios.html" class="menu">Patrocinios</a>
-            </li>
-            <li>
-                <a href="./quienes-somos.html" class="menu">Quienes Somos</a>
-            </li>
-        </ul>
-    </nav>
+        <section class="barra"> 
+            <nav>
+                <ul class="navegador">
+                    <li>
+                        <a href="./store.html" class="menu">Store</a>
+                    </li>
+                    <li>
+                        <a href="./contacto.html" class="menu">Contacto</a>
+                    </li>
+                    <li>
+                        <a href="./patrocinios.html" class="menu">Patrocinios</a>
+                    </li>
+                    <li>
+                        <a href="./quienes-somos.html" class="menu">Quienes Somos</a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
 </header>
 
     <main class="main">
         <h2 class="subtitulos">Store</h2>
-            <section class="airforce productos">
+            <section class="productos">
                 <article  data-aos="fade-down">
                     <img src="../img/airforce 1 tienda 1.jpg" alt="airforce" class="zapas2">
                     <h4 class="zapas">Air force - Redmi  </h4>
@@ -63,7 +65,7 @@
                     <h4 class="zapas">Air Force 1 - Soft pink </h4>
                 </article>
             </section>
-            <section class=" dunklow productos">
+            <section class=" productos">
                 <article  data-aos="fade-down">
                     <img src="../img/dunk low retro 1.jpg" alt="dunk" class="zapas2">
                     <h4 class="zapas"> Dunk Low retro </h4>
@@ -89,7 +91,7 @@
                     <h4 class="zapas"> Dunk Low retro </h4>
                 </article>
             </section>
-            <section class="jordanmid productos">
+            <section class="productos">
                 <article  data-aos="fade-down">
                     <img src="../img/jordan 1 mid 1.jpg" alt="zapas jordan" class="zapas2">
                     <h4 class="zapas">Jordan Mid - Fullows </h4>
@@ -120,10 +122,12 @@
     <footer>   
         <section class="redes">
             <h2 class="derechos">Derechos Reservados</h2>
-            <img src="../img/instagram.png" alt="Instagram" class="rrss">
-            <img src="../img/facebook.png" alt="Facebook" class="rrss"> 
-            <img src="../img/gorjeo.png" alt="X" class="rrss">  
-            <img src="../img/whatsapp.png" alt="whatsapp" class="rrss">
+            <div class="iconos-redes">
+                <img src="../img/instagram.png" alt="Instagram" class="rrss">
+                <img src="../img/facebook.png" alt="Facebook" class="rrss"> 
+                <img src="../img/gorjeo.png" alt="X" class="rrss">  
+                <img src="../img/whatsapp.png" alt="whatsapp" class="rrss">
+            </div>
         </section>
     </footer>
     
